# gun

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE
.github/workflows/: clippy.yml  format.yml  test.yml
docs/: README.md  bet.md
src/: amount_ext.rs  bet.rs  bet_database.rs  bip85.rs  change.rs  ciphertext.rs  config.rs  database.rs  derp  ecdh.rs  ecdh_frost.rs  encode.rs  fee_spec.rs  frost.rs  kdf.rs  keychain.rs  lib.rs  offer.rs  proposal.rs  psbt_ext.rs  sd_card_signer.rs  serde_hacks.rs  signers.rs  wallet.rs  wallet_ext.rs  xkey_signer.rs
src/bet_database/: in_memory.rs  sled.rs
src/betting/: bet.rs  bet_args.rs  ciphertext.rs  database.rs  joint_output.rs  mod.rs  offer.rs  proposal.rs  witness.rs
src/betting/party/: bet_args.rs  mod.rs  offer.rs  proposal.rs  spend_won.rs  state_machine.rs  take_offer.rs
src/betting/wallet_impls/: mod.rs  offer.rs  proposal.rs  spend_won.rs  state_machine.rs  take_offer.rs
src/cmd/: bet.rs  config.rs  dev.rs  frost.rs  fund_wallet.rs  init.rs  mod.rs  oracle.rs  setup.rs  sign.rs  wallet.rs
src/party/: bet_args.rs  claim.rs  joint_output.rs  mod.rs  offer.rs  proposal.rs  randomize.rs  spend_won.rs  state_machine.rs  take_offer.rs  tx_tracker.rs
tests/: end_to_end.rs  frost_test.rs
