[package]
name = "gun_wallet"
version = "0.6.1"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
#bdk = { git = "https://github.com/llfourn/bdk", rev = "ed281f3f5702e4a68f37637962713dfa6665e1ce", features = ["key-value-db", "use-esplora-ureq", "compiler", "keys-bip39"], default-features = false  }
bdk = { git = "https://github.com/nickfarrow/bdk", rev = "3cb90020457e5ae0fb3cd2ae8df6548d8526cf25", features = ["key-value-db", "use-esplora-ureq", "compiler", "keys-bip39"], default-features = false  }
#bdk = { path = "../bdk", features = ["key-value-db", "esplora", "use-esplora-ureq", "compiler", "keys-bip39"], default-features = false }
bitcoin = {git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "0e2e55971275da64ceb62e8991a0a5fa962cb8b1"}
serde_json = "1.0"
olivia_core = { git = "https://github.com/llfourn/olivia", rev = "15c35aad66c418e05046a57c72cc90ce5f351620" }
olivia_secp256k1 = { git = "https://github.com/llfourn/olivia", features = ["libsecp_compat"], rev = "15c35aad66c418e05046a57c72cc90ce5f351620" }
olivia_describe = { git = "https://github.com/llfourn/olivia", rev = "15c35aad66c418e05046a57c72cc90ce5f351620" }
sha2 = "0.9"
base2048 = "2.0.2"
chacha20 = { version = "0.7", features = ["rng", "cipher"] }
serde = { version = "1" }
bincode = "1.3"
anyhow = "1"
thiserror = "1.0"
rand = { version = "0.8", features = ["getrandom"] }
rpassword = "5"
structopt = "0.3"
miniscript = { version = "6", features = ["serde"] }
term-table = {  version = "1", default-features = false }
ureq = { version = "2", features = ["json"] }
url = "2"

[features]
nightly = ["olivia_secp256k1/nightly"]


[dev-dependencies]
rand = "0.8"
#bdk = { git = "https://github.com/llfourn/bdk", rev = "ed281f3f5702e4a68f37637962713dfa6665e1ce", features = ["key-value-db", "use-esplora-ureq", "compiler", "keys-bip39", "test-esplora", "test-blockchains"], default-features = false  }
bdk = { git = "https://github.com/nickfarrow/bdk", rev = "3cb90020457e5ae0fb3cd2ae8df6548d8526cf25", features = ["key-value-db", "use-esplora-ureq", "compiler", "keys-bip39", "test-esplora", "test-blockchains"], default-features = false  }
#bdk = { path = "../bdk", features = ["key-value-db", "esplora", "use-esplora-ureq","compiler", "keys-bip39", "test-esplora", "test-blockchains"], default-features = false }


[patch.crates-io]
bitcoin = {git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "0e2e55971275da64ceb62e8991a0a5fa962cb8b1"}
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript", rev = "6a89bd0d1aa2a4b2e78d624276471727bf61b753" }

