[package]
name = "gun_wallet"
version = "0.5.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"
rust-version = "1.58"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
bdk = { git = "https://github.com/llfourn/bdk", rev = "a7b30391572d139eac69644ff265fb1a7a6d96e7", features = ["key-value-db", "use-esplora-ureq", "compiler", "keys-bip39"], default-features = false  }
# bdk = { path = "../bdk", features = ["key-value-db", "esplora", "use-esplora-ureq", "compiler", "keys-bip39"], default-features = false }
serde_json = "1.0"
olivia_core = { git = "https://github.com/llfourn/olivia", rev = "a818764a3bf18e4f8535d4659c42cb943c41f18c" }
olivia_secp256k1 = { git = "https://github.com/llfourn/olivia", features = ["libsecp_compat"], rev = "a818764a3bf18e4f8535d4659c42cb943c41f18c" }
olivia_describe = { git = "https://github.com/llfourn/olivia", rev = "a818764a3bf18e4f8535d4659c42cb943c41f18c" }
sha2 = "0.9"
base2048 = "2.0.2"
chacha20 = { version = "0.7", features = ["rng", "cipher"] }
serde = { version = "1" }
bincode = "1.3"
anyhow = "1"
thiserror = "1.0"
rand = { version = "0.8", features = ["getrandom"] }
rpassword = "5"
structopt = "0.3"
miniscript = { version = "6", features = ["serde"] }
term-table = {  version = "1", default-features = false }
ureq = { version = "2", features = ["json"] }
url = "2"

[features]
nightly = ["olivia_secp256k1/nightly"]


[dev-dependencies]
rand = "0.8"
bdk = { git = "https://github.com/llfourn/bdk", rev = "a7b30391572d139eac69644ff265fb1a7a6d96e7", features = ["key-value-db", "use-esplora-ureq", "compiler", "keys-bip39", "test-esplora", "test-blockchains"], default-features = false  }
# bdk = { path = "../bdk", features = ["key-value-db", "esplora", "use-esplora-ureq","compiler", "keys-bip39", "test-esplora", "test-blockchains"], default-features = false }


[patch.crates-io]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "0e2e55971275da64ceb62e8991a0a5fa962cb8b1" }
miniscript = { git = "https://github.com/sanket1729/rust-miniscript.git", rev = "f3c38b8cc04fed0a68f4d6074d8c30f6912d958f" }
